<resources>
    <string name="app_name">Gisery</string>
    <string name="github_user">Github User Herry</string>
    <string name="search">Search</string>
    <string name="dummyusername">Herry Prasetyo</string>
    <string name="dummyType">User</string>
    <string name="buttonFavorite">FavoriteUser</string>
    <string name="saveToFavorite">SuccessToSave</string>
    <string name="removeUser">RemoveFromFavorite</string>
    <string name="otherinfo">%1$s . %2$s . %3$s</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <string name="no_data">This Moment Not Found Favorite!!!</string>
    <string name="favoriteUser">Favorite</string>
    <string name="about">About</string>
    <string name="dailyReminder">DailyReminder</string>
    <string name="infoMessage">Dicoding!!! Cari Teman Hari ini</string>
    <string name="reminderpage">PengingatWaktu</string>
    <string name="textNotify">Testing Notification</string>
    <string name="switch_reminderOn">SwitchOn</string>
    <string name="swithc_reminderOFF">SwitchOFF</string>
    <string name="testNotify">Testing Notification</string>
</resources>