<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tool:context=".activity.SettingActivity">

    <TextView
        android:id="@+id/label_daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sizeSixteen"
        android:layout_marginTop="@dimen/sizeSixteen"
        android:text="@string/dailyReminder"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_info_daily"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sizeEight"
        android:maxLines="2"
        android:text="@string/infoMessage"
        app:layout_constraintStart_toStartOf="@+id/label_daily_reminder"
        app:layout_constraintTop_toBottomOf="@+id/label_daily_reminder"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sizeSixteen"
        android:layout_marginEnd="@dimen/sizeSixteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_test_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sizeSixteen"
        android:layout_marginTop="@dimen/sizeThirdtySix"
        android:layout_marginEnd="@dimen/sizeSixteen"
        android:text="@string/textNotify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_daily"/>




</androidx.constraintlayout.widget.ConstraintLayout>