<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        style="?android:attr/progressBarStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/sizeSixteen"
        android:layout_marginRight="@dimen/sizeSixteen"
        android:layout_marginBottom="@dimen/sizeSixteen"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/fourtySP"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/github_user"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text_user"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sizeEight"
                android:layout_marginStart="88dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/drawable_edit_text_background"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/app_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/sizeSixteen"
                android:paddingTop="@dimen/sizeTen"
                android:paddingRight="@dimen/sizeSixteen"
                android:paddingBottom="@dimen/sizeTen" />

            <Button
                android:id="@+id/btn_search_user"
                style="@style/Widget.Custom.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textAllCaps="true" />

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/sizeOnH2"
        android:scrollbars="vertical"
        tools:listitem="@layout/useritems" />
</RelativeLayout>